chore: Add code formatter (#76)
Most of the changes are due to running `./gradlew spotlessApply`